# InferenceProjectPhysics

./: .gitignore  README.md  SUBMISSION.md  WORKFLOW.md  prompt.txt  prompts.jsonl  pyproject.toml  requirements.txt
batch_inputs/: common_pg_llm_prompts.txt
physics_class_inference/: __init__.py  __main__.py  batch.py  batch_cli.py  cli.py  config.py  generation.py  inference.py  tokenizer.py
scripts/: make_submission_zip.py
tests/: __init__.py  test_batch.py  test_batch_cli.py  test_cli.py  test_config.py  test_generation.py  test_inference.py  test_smoke.py  test_tokenizer.py
tests/integration/: __init__.py  test_model_runtime.py
