[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physics-class-inference"
version = "0.1.0"
description = "Python port of a local ONNX-based inference engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "onnxruntime>=1.18",
    "tiktoken>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
physics-class-inference = "physics_class_inference.cli:main"
physics-class-inference-batch = "physics_class_inference.batch_cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["physics_class_inference*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
